Adding return links

--- a/reviews/GodandMankind_ComparativeReligions.html
+++ b/reviews/GodandMankind_ComparativeReligions.html
@@ -64,6 +64,7 @@
                                 3. How can we study it?<br>
                                 He flies through the first two questions and then spends most of the time discussing several academic approaches to the study of religion (religion as primitive science or an explanation of natural phenomenon vs religion as a social system for building a cohesive society, for example). He also provides a brief comparison of religious themes and how the converge and diverge across the different religious traditions, focusing on stories of cosmogenesis and heroes in the various traditions. The lectures focus heavily on the Judeo-Christian religions with much briefer forays into Hinduism, Buddhism, and Islam. I believe the topic is really too vast to be covered in such a short period of time. The course would serve as a good introduction to individuals looking to begin the study of religion but does not dive into the topic deep enough for those who already have a grounding in religious studies. 
                             </p>
+							<a href="../review_main.html">Back to Reviews</a>
 						</div>
 					</div>
 
