--- a/reviews/LoveintheTimeofCholera.html
+++ b/reviews/LoveintheTimeofCholera.html
@@ -64,6 +64,7 @@
                                 My main issue with the story was Florentino - I did not care for the character and I sometimes felt my interest dwindling during long stretches of his viewpoint. He has some redeeming qualities, but his obsessive love makes a lot of his story feel a bit repetitive, his character progression is very slow. I believe Márquez made him a little unlikeable intentionally - although a majority of the story takes place from his viewpoint, I felt like the main character was Fermina and we were meant to side with her impressions and decisions concerning Florentino. He was a much more likeable character during the points in the plot where she also viewed him favorably. However, most of the time he was a little creepy with his obsession, stalker-ish, and the fact that his relentless pursuit was portrayed to be romantic in any way is disoncerting.<br>
                                 Anyway, bit of a mixed bag, but I do believe the beauty of the story and the themes do outweigh any of the negatives. Worth the read.
                             </p>
+							<a href="../review_main.html">Back to Reviews</a>
 						</div>
 					</div>
 
