--- a/reviews/NumbertheStars.html
+++ b/reviews/NumbertheStars.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>High Fidelity by Nick Hornby</title>
+		<title>Number the Stars by Lois Lowry</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -48,22 +48,18 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<span class="image main"><img src="../images/HighFidelity.jpg" alt="" /></span> 
-							<h1>"High Fidelity" by Nick Hornby</h1>
+							<span class="image main"><img src="../images/NumbertheStars.jpg" alt="" /></span> 
+							<h1>"Number the Stars" by Lois Lowry</h1>
 							<h2>TL;DR</h2>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
+							<span class="fa fa-star checked"></span>
+							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star"></span>
-							<span class="fa fa-star"></span>
-							<span class="fa fa-star"></span>
-							<p>This book did make me chuckle a few times, I enjoyed the dry humor of it. However, none of the characters were likeable and the plot was uninteresting to me. I enjoyed the ending, but the last 10% of the book was not great enough to redeem it from the drudgery of the first 90%.<br>
-                                Advisory: language, sexual content
-                            </p>
+							<p>Lois Lowry does a great job of making difficult subjects accessible to younger audiences and this book is no exception. This tells the story of a pre-teen girl in Nazi-occupied Denmark who must learn to overcome fears and anxieties to protect her neighbors from a horror she does not completely understand. A quick and easy read, good storytelling with a valuable lesson at the heart.</p>
 							<h2>Review</h2>
-							<p>"High Fidelity" is like the adult version of "Catcher in the Rye" in that you have a misunderstood, socially awkward protagonist whose primary pastime is to complain about their situation and blame it on anyone but themselves. Unless you identify with the characters' complaints (and I know many that do, it's not uncommon, but I'm not one of them), I think it's difficult to find either of the books to be enjoyable. If I had to choose one, I would prefer this one because I did at least enjoy the humor of going through scenes and conversations only to find out that they were just how they took place in our narrator's head. In reality, the scene played out very differently, then our protagonist might forget that their memory of it was the false version later on, which leads to awkward but entertaining conversations.<br>
-                                What I enjoyed about the ending of the book is that we finally start seeing some real character development. Rob Fleming, our protagonist, turns more introspective and less narrative as the story goes on and does begin making progress on the path of hope for a brighter future. He finally begins to take action as well, instead of sitting around and chatting about it with his coworkers. But the constant top 5 lists throughout the novel drove me crazy, I will never be able to think of those in the same way again.
-                            </p>
-							<a href="../review_main.html">Back to Reviews</a>
+							<p></p>
+                            <a href="../review_main.html">Back to Reviews</a>
 						</div>
 					</div>
 
