--- a/review_main.html
+++ b/review_main.html
@@ -57,7 +57,7 @@
 									<li>I do not think the book has any redeeming qualities. Or if there are any, the negatives outweigh them so much it's not worth reading. Very rarely do I use this.</li>
 									<li>I can see some merit in the book and why some people might enjoy it, but I personally would recommend not wasting your time.</li>
 									<li>The book is enjoyable but nothing really stands out. Or I feel the book is a mixed bag with some sections that are pretty bad but other better sections that balance them out. My goal is for most books to land in this category, if it is of interest to you then go for it.</li>
-									<li>I really enjoyed the book and thought it a worthwhile read, but would hesitate to recommend it to persons of certain dispositions.</li>
+									<li>I really enjoyed the book and thought it a worthwhile read, but I didn't love it or I would hesitate to recommend it to persons of certain dispositions.</li>
                                 	<li>One of my favorite books that I will be recommending to just about everyone.</li>
 								</ol>
 							</div>
@@ -119,6 +119,21 @@
 												<span class="fa fa-star checked"></span>
 												<span class="fa fa-star"></span>
 												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="NumbertheStars" data-rating="4" date="2023-09-19">
+										<span class="image">
+											<img src="images/NumbertheStars.jpg" alt="" />
+										</span>
+										<a href="reviews/NumbertheStars.html">
+											<h2>High Fidelity</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
 												<span class="fa fa-star"></span>
 											</div>
 										</a>
