--- a/review_main.html
+++ b/review_main.html
@@ -128,7 +128,7 @@
 											<img src="images/NumbertheStars.jpg" alt="" />
 										</span>
 										<a href="reviews/NumbertheStars.html">
-											<h2>High Fidelity</h2>
+											<h2>Number the Stars</h2>
 											<div class="content">
 												<span class="fa fa-star checked"></span>
 												<span class="fa fa-star checked"></span>
