--- a/reviews/HighFidelity.html
+++ b/reviews/HighFidelity.html
@@ -56,7 +56,7 @@
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
-							<p>This book did make me chuckle a few times, I enjoyed the dry humor of it. However, none of the characters were likeable and the plot was uninteresting to me. I enjoyed the ending, but the last 10% of the book was not great enough to redeem it from the drudgery of the first 90%.<br>
+							<p>This book did make me chuckle a few times, I enjoyed the dry humor of it. However, none of the characters were likeable and the plot was uninteresting to me. The storyline follows a man, Rob Fleming, who owns a records shop and has recently been dumped by his girlfriend. He journeys through the stages of grief dealing with the breakup. And creates lists of favorite albums in various categories. I enjoyed the ending, but the last 10% of the book was not great enough to redeem it from the drudgery of the first 90%.<br>
                                 Advisory: language, sexual content
                             </p>
 							<h2>Review</h2>
