premises and NumbertheStars

--- a/reviews/LoveintheTimeofCholera.html
+++ b/reviews/LoveintheTimeofCholera.html
@@ -50,6 +50,7 @@
 						<div class="inner">
 							<span class="image main"><img src="../images/LoveInTheTimeOfCholera.jpg" alt="" /></span> 
 							<h1>"Love in the Time of Cholera" by Gabriel García Márquez</h1>
+							<p>Premise: A tale of a love triangle that spans decades from the end of the 19th century into the early 20th century. The term love triangle is used loosely, however, as two points of the triangle don't really know how involved the third member is. Love given, love received, and love unrequited.</p>
 							<h2>TL;DR</h2>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
