--- a/reviews/NumbertheStars.html
+++ b/reviews/NumbertheStars.html
@@ -50,15 +50,21 @@
 						<div class="inner">
 							<span class="image main"><img src="../images/NumbertheStars.jpg" alt="" /></span> 
 							<h1>"Number the Stars" by Lois Lowry</h1>
+                            <p>Premise: The story of Annemarie, a pre-teen girl in Nazi-occupied Denmark who must learn to overcome fears and anxieties to protect her neighbors from a horror she does not completely understand.</p>
 							<h2>TL;DR</h2>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star"></span>
-							<p>Lois Lowry does a great job of making difficult subjects accessible to younger audiences and this book is no exception. This tells the story of a pre-teen girl in Nazi-occupied Denmark who must learn to overcome fears and anxieties to protect her neighbors from a horror she does not completely understand. A quick and easy read, good storytelling with a valuable lesson at the heart.</p>
+							<p>Lois Lowry does a great job of making difficult subjects accessible to younger audiences and this book is no exception. A quick and easy read, good storytelling with a valuable lesson of courage and compassion at the heart.</p>
 							<h2>Review</h2>
-							<p></p>
+							<p>Any story of heroism during the Holocaust reminds me of the John Stuart Mill quote "Bad men need nothing more to compass their ends, than that good men should look on and do nothing." How easy it is to be so paralyzed by fear or apathy that we fail to stand up and act, but Lowry demonstrates a few techniques that can be used to encourage action.
+                                First, sometimes it is easier to be brave when we don't even realize that's what we are doing. Annemarie's relatives speak in code or use half-truths to convey secrets without placing the messengers in danger, allowing their partners to feel less anxious about their missions. This thought is revisited by Annemarie frequently throughout.
+                                Second, social pressure can be used for good. When all your friends and family are involved in a cause, it's difficult to avoid being caught up in the cause as well.
+                                Finally, the power stories have as models of correct behavior. Annemarie takes courage from stories throughout the book. She turns to the heroes and heroines of the fairy tales of her childhood for inspiration on how to act. She also repeatedly requests to hear the story of a child that spoke back to a Nazi soldier in defense of the king of Denmark. She is surrounded by stories that model bravery and standing up for just causes, so it is only natural that she follow the examples she was given when it comes time for her to make a difficult decision herself. I believe this may be the ultimate goal Lowry has in writing this story - to share a young model of bravery and empathy with young readers, encouraging them to stand up for what is right.<br>
+                                <br>Ultimately an excellent story for readers young and old.
+                            </p>
                             <a href="../review_main.html">Back to Reviews</a>
 						</div>
 					</div>
