--- a/reviews/HighFidelity.html
+++ b/reviews/HighFidelity.html
@@ -50,18 +50,19 @@
 						<div class="inner">
 							<span class="image main"><img src="../images/HighFidelity.jpg" alt="" /></span> 
 							<h1>"High Fidelity" by Nick Hornby</h1>
+							<p>Premise: Our protagonist, Rob Fleming, owns a records shop and has recently been dumped by his girlfriend. He journeys through the stages of grief as he tries to cope with the breakup and claw his way out of a depressing situation. And he constantly creates "Top 5" lists, usually of favorite albums that match very particular criteria.</p>
 							<h2>TL;DR</h2>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
 							<span class="fa fa-star"></span>
-							<p>This book did make me chuckle a few times, I enjoyed the dry humor of it. However, none of the characters were likeable and the plot was uninteresting to me. The storyline follows a man, Rob Fleming, who owns a records shop and has recently been dumped by his girlfriend. He journeys through the stages of grief dealing with the breakup. And creates lists of favorite albums in various categories. I enjoyed the ending, but the last 10% of the book was not great enough to redeem it from the drudgery of the first 90%.<br>
+							<p>This book did make me chuckle a few times, I enjoyed the dry humor of it. However, none of the characters were likeable and the plot was uninteresting to me. I enjoyed the ending, but the last 10% of the book was not great enough to redeem it from the drudgery of the first 90%.<br>
                                 Advisory: language, sexual content
                             </p>
 							<h2>Review</h2>
 							<p>"High Fidelity" is like the adult version of "Catcher in the Rye" in that you have a misunderstood, socially awkward protagonist whose primary pastime is to complain about their situation and blame it on anyone but themselves. Unless you identify with the characters' complaints (and I know many that do, it's not uncommon, but I'm not one of them), I think it's difficult to find either of the books to be enjoyable. If I had to choose one, I would prefer this one because I did at least enjoy the humor of going through scenes and conversations only to find out that they were just how they took place in our narrator's head. In reality, the scene played out very differently, then our protagonist might forget that their memory of it was the false version later on, which leads to awkward but entertaining conversations.<br>
-                                What I enjoyed about the ending of the book is that we finally start seeing some real character development. Rob Fleming, our protagonist, turns more introspective and less narrative as the story goes on and does begin making progress on the path of hope for a brighter future. He finally begins to take action as well, instead of sitting around and chatting about it with his coworkers. But the constant top 5 lists throughout the novel drove me crazy, I will never be able to think of those in the same way again.
+                                What I enjoyed about the ending of the book is that we finally start seeing some real character development. Our protagonist, turns more introspective and less narrative as the story goes on and does begin making progress on the path of hope for a brighter future. He finally begins to take action as well, instead of sitting around and chatting about it with his coworkers. But the constant top 5 lists throughout the novel drove me crazy, I will never be able to think of tier lists in the same way again.
                             </p>
 							<a href="../review_main.html">Back to Reviews</a>
 						</div>
