--- a/review_main.html
+++ b/review_main.html
@@ -138,6 +138,21 @@
 											</div>
 										</a>
 									</article>
+									<article name="Brain-BasedGuideToCommunicatingBetter" data-rating="3" date="2023-09-18">
+										<span class="image">
+											<img src="images/BBGCommunicatingBetter.jpg" alt="" />
+										</span>
+										<a href="reviews/BBGCommunicatingBetter.html">
+											<h2>The Brain-Based Guide to Communicating Better</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
 								</section>
 							</div>
 						</div>
