--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 									<a href="pyauto.html">
 										<h2>Python</h2>
 										<div class="content">
-											<p>Data engineering and analysis projects.</p>
+											<p>Data engineering and analysis projects + automations</p>
 										</div>
 									</a>
 								</article>
