--- a/review_main.html
+++ b/review_main.html
@@ -168,6 +168,21 @@
 											</div>
 										</a>
 									</article>
+									<article name="GreatDebate-AdvocatesandOpponentsoftheAmericanConstitution" data-rating="3" date="2023-09-17">
+										<span class="image">
+											<img src="images/GreatDebate-Constitution.jpg" alt="" />
+										</span>
+										<a href="reviews/GretDebate-Constitution.html">
+											<h2>Great Debate: Advocates and Opponents of the American Constitution</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
 								</section>
 							</div>
 						</div>
