--- a/review_main.html
+++ b/review_main.html
@@ -78,6 +78,21 @@
 									</select>
 								</section>
 								<section class="tiles">
+									<article name="FairyTale" data-rating="4" date="2023-10-06">
+										<span class="image">
+											<img src="images/FairyTale.jpg" alt="" />
+										</span>
+										<a href="reviews/FairyTale.html">
+											<h2>Fairy Tale</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
 									<article name="LoveInTheTimeOfCholera" data-rating="4" date="2023-09-30">
 										<span class="image">
 											<img src="images/LoveInTheTimeOfCholera.jpg" alt="" />
