Jesus and gospels

--- a/review_main.html
+++ b/review_main.html
@@ -198,6 +198,21 @@
 											</div>
 										</a>
 									</article>
+									<article name="JesusandtheGospels" data-rating="4" date="2023-09-14">
+										<span class="image">
+											<img src="images/JesusandGospels.jpeg" alt="" />
+										</span>
+										<a href="reviews/JesusandGospels.html">
+											<h2>Jesus and the Gospels</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
 								</section>
 							</div>
 						</div>
