--- a/review_main.html
+++ b/review_main.html
@@ -215,7 +215,7 @@
 									</article>
 									<article name="BiologyandHumanBehavior-NeurologicalOriginsofIndividuality" data-rating="5" date="2023-09-09">
 										<span class="image">
-											<img src="images/BioHumanBehavior.jpeg" alt="" />
+											<img src="images/BioHumanBehavior.jpg" alt="" />
 										</span>
 										<a href="reviews/BioHumanBehavior.html">
 											<h2>Biology and Human Behavior: The Neurological Origins of Individuality</h2>
