Human Behavior star update

--- a/review_main.html
+++ b/review_main.html
@@ -80,6 +80,21 @@
 								<section class="tiles">
 									<article name="FairyTale" data-rating="4" date="2023-10-06">
 										<span class="image">
+											<img src="images/ACOTAR.jpg" alt="" />
+										</span>
+										<a href="reviews/ACOTAR.html">
+											<h2>A Court of Thorns and Roses Trilogy</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="FairyTale" data-rating="4" date="2023-10-06">
+										<span class="image">
 											<img src="images/FairyTale.jpg" alt="" />
 										</span>
 										<a href="reviews/FairyTale.html">
