--- a/reviews/ACOTAR.html
+++ b/reviews/ACOTAR.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Biology and Human Behavior: Neurological Origins of Individuality by Robert Sapolsky</title>
+		<title>A Court of Thorns and Roses by Sarah J. Maas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -48,21 +48,21 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<span class="image main"><img src="../images/BioHumanBehavior.jpg" alt="" /></span> 
-							<h1>"Biology and Human Behavior: Neurological Origins of Individuality" by Robert Sapolsky</h1>
+							<span class="image main"><img src="../images/ACOTAR.jpg" alt="" /></span> 
+							<h1>"A Court of Thorns and Roses" by Sarah J. Maas</h1>
+                            <p>Premise: </p>
 							<h2>TL;DR</h2>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
 							<span class="fa fa-star checked"></span>
-							<span class="fa fa-star checked"></span>
-							<p>Sapolsky is an excellent instructor, well-known in the field for nerds like me who study the behavioral sciences and look up additional lecture material online. Because I am so familiar with the subject, I did not expect to learn a lot, but I was wrong. Although I knew much of the basic content, Sapolsky helped draw connections and craft meanings that I had never made before. He brought the material to life, integrating each new piece of information every step of the way and applying it to gain a better understanding of our experience. The material is accessible, relevant, and extremely interesting, I highly recommend.</p>
-							<h2>Review</h2>
-							<p>
-                                The lectures in this series follow a very logical progression, building from the smallest picture of human behavior and moving to a larger and larger scale. Each lecture focuses on introducing a mechanism and then explaining how researching this mechanism has improved out understanding of certain aspects of human behavior. Beginning at the smallest point, Sapolsky starts with a single neuron, builds to the communication between neurons, then neuronal systems, hormonal systems, genetic evolution, and ending with ethology, or the study of behavior in the context of environment. So the lectures build from a single cell up to the entire environment. Sapolsky then concludes with a multi-lecture series analyzing human aggression through all of the mechanisms presented throughout the course to demonstrate how the concepts can be applied to more fully understand why a behavior exists. <br>
-                                Dr. Sapolsky brings entertainment to many of the lectures with his quirky examples and offhand remarks. Although some of the material is very technical, he manages to make it accessible through the examples provided. This was one of the most captivating and informative Great Courses lecture series I have ever listened to.
+							<span class="fa fa-star"></span>
+							<p><br>
+                                Advisory: Violence, Sexual Content
                             </p>
-							<a href="../review_main.html">Back to Reviews</a>
+							<h2>Review</h2>
+							<p></p>
+                            <a href="../review_main.html">Back to Reviews</a>
 						</div>
 					</div>
 
