--- a/review_main.html
+++ b/review_main.html
@@ -78,7 +78,127 @@
 									</select>
 								</section>
 								<section class="tiles">
-									<article name="FairyTale" data-rating="4" date="2023-10-06">
+									<article name="LanguageAtoZ" data-rating="4" date="2023-11-11">
+										<span class="image">
+											<img src="images/LanguageAtoZ.jpg" alt="" />
+										</span>
+										<a href="reviews/LanguageAtoZ.html">
+											<h2>Language A to Z</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="EarlyChristianity-theExperienceoftheDivine" data-rating="2" date="2023-11-09">
+										<span class="image">
+											<img src="images/EarlyChristianity-ExperienceDivine.jpg" alt="" />
+										</span>
+										<a href="reviews/EarlyChristianity-ExperienceDivine.html">
+											<h2>Early Christianity: The Experience of the Divine</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="ColorPurple" data-rating="4" date="2023-11-01">
+										<span class="image">
+											<img src="images/ColorPurple.jpg" alt="" />
+										</span>
+										<a href="reviews/ColorPurple.html">
+											<h2>The Color Purple</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="HollyGibney" data-rating="4" date="2023-10-30">
+										<span class="image">
+											<img src="images/HollyGibney.jpg" alt="" />
+										</span>
+										<a href="reviews/Holly.html">
+											<h2>Holly Gibney Series</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="Rage" data-rating="3" date="2023-10-28">
+										<span class="image">
+											<img src="images/Rage.jpg" alt="" />
+										</span>
+										<a href="reviews/Rage.html">
+											<h2>Rage</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="IfItBleeds" data-rating="4" date="2023-10-28">
+										<span class="image">
+											<img src="images/IfItBleeds.jpg" alt="" />
+										</span>
+										<a href="reviews/IfItBleeds.html">
+											<h2>If It Bleeds</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="JustAfterSunset" data-rating="3" date="2023-10-24">
+										<span class="image">
+											<img src="images/JustAfterSunset.jpg" alt="" />
+										</span>
+										<a href="reviews/JustAfterSunset.html">
+											<h2>Just After Sunset</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="SleepingBeauties" data-rating="4" date="2023-10-21">
+										<span class="image">
+											<img src="images/SleepingBeauties.jpg" alt="" />
+										</span>
+										<a href="reviews/SleepingBeauties.html">
+											<h2>Sleeping Beauties</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
+									<article name="CourtofThornsandRoses" data-rating="4" date="2023-10-14">
 										<span class="image">
 											<img src="images/ACOTAR.jpg" alt="" />
 										</span>
@@ -240,6 +360,21 @@
 												<span class="fa fa-star checked"></span>
 												<span class="fa fa-star checked"></span>
 												<span class="fa fa-star checked"></span>
+											</div>
+										</a>
+									</article>
+									<article name="CenturyTrilogy" data-rating="4" date="2023-09-05">
+										<span class="image">
+											<img src="images/CenturyTrilogy.jpg" alt="" />
+										</span>
+										<a href="reviews/CenturyTrilogy.html">
+											<h2>The Century Trilogy</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
 											</div>
 										</a>
 									</article>
