--- a/review_main.html
+++ b/review_main.html
@@ -78,6 +78,36 @@
 									</select>
 								</section>
 								<section class="tiles">
+									<article name="GreatestControversiesEarlyChristian" data-rating="5" date="2023-11-15">
+										<span class="image">
+											<img src="images/GreatestControversiesEarlyChristian.jpg" alt="" />
+										</span>
+										<a href="reviews/GreatestControversiesEarlyChristian.html">
+											<h2>The Greatest Controversies of Early Christian History</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+											</div>
+										</a>
+									</article>
+									<article name="TurtlesAllDown" data-rating="4" date="2023-11-13">
+										<span class="image">
+											<img src="images/TurtlesAllDown.jpg" alt="" />
+										</span>
+										<a href="reviews/TurtlesAllDown.html">
+											<h2>Turtles All the Way Down</h2>
+											<div class="content">
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star checked"></span>
+												<span class="fa fa-star"></span>
+											</div>
+										</a>
+									</article>
 									<article name="LanguageAtoZ" data-rating="4" date="2023-11-11">
 										<span class="image">
 											<img src="images/LanguageAtoZ.jpg" alt="" />
